首页CardView显示,上拉刷新及下拉加载功能 PS:由于不知道Agera怎么刷新数据源,属于未完成

--- a/app/src/main/res/layout/item_mm.xml
+++ b/app/src/main/res/layout/item_mm.xml
@@ -17,43 +17,41 @@
   ~ along with Meizhi.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout
-    android:id="@+id/meizhi_card"
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="1dp"
-    android:layout_marginRight="1dp"
-    android:layout_marginTop="2dp"
     android:clickable="true"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/iv_meizhi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"/>
+    android:orientation="vertical"
+    app:cardBackgroundColor="@color/md_white_1000"
+    app:cardCornerRadius="@dimen/card_elevation"
+    app:cardElevation="@dimen/card_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp">
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+
+        <com.hawk.gank.ui.widget.RatioImageView
+            android:id="@+id/iv_mm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:background="@mipmap/ic_launcher"/>
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            tools:text="Title"/>
+            android:text="Title"/>
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
 
