--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,11 +3,15 @@
 
     <!--主页-->
     <dimen name="fab_margin">16dp</dimen>
-
+    <dimen name="card_elevation">5dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="padding_mm">10dp</dimen>
     <dimen name="padding_gank_item">16dp</dimen>
     <dimen name="padding_vertical_gank_item">8dp</dimen>
     <dimen name="text_size_gank_title">14sp</dimen>
     <dimen name="text_size_gank_category">18sp</dimen>
+
+    <!--主页-->
 
 
 </resources>
