Agera更换成RxJava(因RxJava较成熟,文档较多)

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="padding_vertical_gank_item">8dp</dimen>
     <dimen name="text_size_gank_title">14sp</dimen>
     <dimen name="text_size_gank_category">18sp</dimen>
+    <dimen name="menu_header">150dp</dimen>
 
     <!--主页-->
 
