--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,10 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#ffffffff</color>
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="brown">#565656</color>
+    <color name="gray">#999999</color>
+    <color name="blue">#1e9efa</color>
 
 </resources>
