--- a/app/src/main/res/values/common_attrs.xml
+++ b/app/src/main/res/values/common_attrs.xml
@@ -14,4 +14,11 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="SwipeFlingAdapterView">
+        <attr name="y_offset_step" format="dimension" />
+        <attr name="rotation_degrees" format="float" />
+        <attr name="min_adapter_stack" format="integer" />
+        <attr name="max_visible" format="integer" />
+    </declare-styleable>
+
 </resources>
