--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,63 @@
 <resources>
 
+    <style name="Text_Black_20" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Text_Black_18" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text_Black_16" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text_Brown_18" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text_Brown_16" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text_Gray_20" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Text_Gray_18" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text_Gray_16" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text_Gray_14" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Text_White_20" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Text_White_18" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text_White_14" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 
 </resources>
