1\添加开眼视频接口 2\变更主页视图方式

--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -5,7 +5,8 @@
         <item
             android:id="@+id/menu_pic"
             android:title="@string/menu_pic"
-            android:icon="@mipmap/ic_github"/>
+            android:icon="@mipmap/ic_github"
+            android:checked="true"/>
         <item
             android:id="@+id/menu_video"
             android:title="@string/menu_video"
