--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
 <resources>
 
-    <style name="Text_Black_20" parent="android:TextAppearance.Theme">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">20sp</item>
+    <style name="Text_Accent_18" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text_Accent_16" parent="android:TextAppearance.Theme">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Text_Black_18" parent="android:TextAppearance.Theme">
@@ -25,11 +30,6 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="Text_Gray_20" parent="android:TextAppearance.Theme">
-        <item name="android:textColor">@color/gray</item>
-        <item name="android:textSize">20sp</item>
-    </style>
-
     <style name="Text_Gray_18" parent="android:TextAppearance.Theme">
         <item name="android:textColor">@color/gray</item>
         <item name="android:textSize">18sp</item>
@@ -43,11 +43,6 @@
     <style name="Text_Gray_14" parent="android:TextAppearance.Theme">
         <item name="android:textColor">@color/gray</item>
         <item name="android:textSize">14sp</item>
-    </style>
-
-    <style name="Text_White_20" parent="android:TextAppearance.Theme">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
     </style>
 
     <style name="Text_White_18" parent="android:TextAppearance.Theme">
