--- a/app/src/main/res/layout/ac_ui_login.xml
+++ b/app/src/main/res/layout/ac_ui_login.xml
@@ -7,7 +7,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="0dp"
         android:layout_weight="1">
 
         <LinearLayout
