--- a/lib.base/src/main/res/values/common_dimen.xml
+++ b/lib.base/src/main/res/values/common_dimen.xml
@@ -3,5 +3,7 @@
 
     <dimen name="common_tab_height">48dp</dimen>
     <dimen name="common_spacing">8dp</dimen>
+    <dimen name="common_indicator_height">2dp</dimen>
+    <dimen name="common_indicator_start">10dp</dimen>
 
 </resources>
