--- a/app/src/main/res/layout/ac_ui_info.xml
+++ b/app/src/main/res/layout/ac_ui_info.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="?attr/fitSystemWindow"
-    android:clipToPadding="?attr/clipPadding">
+    android:fitsSystemWindows="?attr/fits_windows"
+    android:clipToPadding="?attr/clip_padding">
 
     <android.support.design.widget.AppBarLayout
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
