--- a/app/src/main/res/layout/item_android.xml
+++ b/app/src/main/res/layout/item_android.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <com.hawk.gank.ui.widget.RatioImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/ivAverator"
         android:layout_width="@dimen/item_averator"
         android:layout_height="@dimen/item_averator"
         android:layout_margin="@dimen/item_margin"
         android:layout_centerVertical="true"
-        android:scaleType="centerCrop"
         android:adjustViewBounds="true"
-        android:background="@mipmap/ic_launcher"
-        android:contentDescription="@null"/>
+        app:roundAsCircle="false"
+        app:actualImageScaleType="centerCrop"
+        app:placeholderImage="@mipmap/ic_launcher"
+        app:placeholderImageScaleType="fitCenter" />
 
     <LinearLayout
         android:layout_width="match_parent"
