--- a/app/src/main/res/layout/ac_ui_account.xml
+++ b/app/src/main/res/layout/ac_ui_account.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/include_appbar" />
 
     <FrameLayout
-        android:id="@+id/fragmentContainer"
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1" />
