--- a/app/src/main/res/layout/ac_ui_fragment_container.xml
+++ b/app/src/main/res/layout/ac_ui_fragment_container.xml
@@ -7,9 +7,9 @@
     <include layout="@layout/include_appbar" />
 
     <FrameLayout
-        android:id="@+id/fragmentContainer"
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
 </LinearLayout>
