--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#1E90FF</color>
+    <color name="colorPrimaryDark">#4169E1</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorStatus">#4000</color>
 
     <color name="transparent">#00000000</color>
     <color name="white">#ffffffff</color>
@@ -12,5 +11,7 @@
     <color name="brown">#565656</color>
     <color name="gray">#999999</color>
     <color name="blue">#1e9efa</color>
+
+    <color name="light_gray">#e0e0e0</color>
 
 </resources>
