--- a/lib.base/src/main/res/layout/include_appbar.xml
+++ b/lib.base/src/main/res/layout/include_appbar.xml
@@ -7,15 +7,6 @@
     android:layout_height="wrap_content"
     app:elevation="3dp" >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_scrollFlags="scroll|enterAlways" >
-
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/include_toolbar" />
 
 </android.support.design.widget.AppBarLayout>
