--- a/lib.base/src/main/res/values/common_style.xml
+++ b/lib.base/src/main/res/values/common_style.xml
@@ -12,4 +12,9 @@
         <item name="android:textColor">@color/tab_text</item>
     </style>
 
+    <style name="TextAppearance.Title" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">@dimen/toolbar_size</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
