--- a/app/src/main/res/values-v19/theme.xml
+++ b/app/src/main/res/values-v19/theme.xml
@@ -3,12 +3,12 @@
 
     <style name="AppBaseTheme" parent="BaseTheme.Light">
 
-        <item name="fits_windows">true</item>
-        <item name="clip_padding">true</item>
+        <item name="fits_windows">false</item>
+        <item name="clip_padding">false</item>
 
         <!--Translucent system bars-->
-        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowContentOverlay">@null</item>
 
     </style>
