--- a/app/src/main/res/layout/ac_ui_sidebar.xml
+++ b/app/src/main/res/layout/ac_ui_sidebar.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 侧滑面板 -->
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     android:paddingTop="@dimen/sidbar_layout_t">
 
     <RelativeLayout
@@ -28,5 +29,34 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/layCollect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/sidbar_head_margin"
+        android:layout_marginTop="@dimen/sidbar_lay_margin" >
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/ivCollect"
+            android:layout_width="@dimen/sidbar_icon"
+            android:layout_height="@dimen/sidbar_icon"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/sidbar_collect" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/ivCollect"
+            android:layout_marginLeft="@dimen/sidbar_icon_margin"
+            android:layout_centerVertical="true"
+            android:text="@string/sidbar_collect"
+            android:textAppearance="@style/Text_Black_16" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+</LinearLayout>
