--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--主页-->
+    <!--公共-->
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="card_elevation">5dp</dimen>
     <dimen name="card_margin">5dp</dimen>
+
+    <integer name="anim_duration_short">300</integer>
+
+    <!--主页-->
     <dimen name="padding_mm">10dp</dimen>
     <dimen name="padding_gank_item">8dp</dimen>
     <dimen name="padding_vertical_gank_item">8dp</dimen>
@@ -22,12 +26,11 @@
     <!--    侧边栏-->
     <dimen name="shadow_width">20dp</dimen>
     <dimen name="slidingmenu_offset">60dp</dimen>
-    <dimen name="sidbar_layout_t">20dp</dimen>
-    <dimen name="sidbar_layout_head_h">100dp</dimen>
-    <dimen name="sidbar_head">60dp</dimen>
-    <dimen name="sidbar_head_margin">20dp</dimen>
+    <dimen name="sidbar_layout_padding">20dp</dimen>
+    <dimen name="sidbar_head_h">100dp</dimen>
+    <dimen name="sidbar_head_img">60dp</dimen>
     <dimen name="sidbar_head_text_margin">10dp</dimen>
-    <dimen name="sidbar_lay_margin">22dp</dimen>
+    <dimen name="sidbar_icon_h">50dp</dimen>
     <dimen name="sidbar_icon">25dp</dimen>
     <dimen name="sidbar_icon_margin">10dp</dimen>
 
